fix memo dependancy array, overflow on table, max-width desktop

--- a/tax-tracker/src/App.module.scss
+++ b/tax-tracker/src/App.module.scss
@@ -6,7 +6,7 @@
   justify-content: space-between;
   .container {
     .tax {
-      max-width: 1000px;
+      max-width: 1500px;
       margin: 32px auto;
     }
   }
