--- a/tax-tracker/src/containers/Tax/style.module.scss
+++ b/tax-tracker/src/containers/Tax/style.module.scss
@@ -6,4 +6,7 @@
   .form {
     padding-bottom: 10px;
   }
+  .table {
+    overflow-x: auto;
+  }
 }
